--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-masonry-css": "^1.0.16",
     "react-modal": "^3.15.1",
     "react-responsive-masonry": "^2.1.4",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
